gcc/testsuite/g++.dg/cpp0x/gen-attrs-59.C
// PR c++/58600
// { dg-do compile { target c++11 } }

namespace N {}
using namespace N alignas(X); // { dg-error "declared" }
